Add images in main

--- a/index.html
+++ b/index.html
@@ -43,19 +43,25 @@
     <main>
         <section>
             <div class="contenitore debug flex-elementi">
-                <div class="debug left">immagine</div>
+                <div class="debug left">
+                    <img src="./img/item1.svg" alt="immagine 1">
+                </div>
                 <div class="debug right">testo</div>
             </div>
         </section>
         <section class="sezione-grigia">
             <div class="contenitore debug flex-elementi">
                 <div class="debug right">testo</div>
-                <div class="debug left">immagine</div>
+                <div class="debug left">
+                    <img src="./img/item2.svg" alt="immagine 2">
+                </div>
             </div>
         </section>
         <section>
             <div class="contenitore debug flex-elementi">
-                <div class="debug left">immagine</div>
+                <div class="debug left">
+                    <img src="./img/item3.svg" alt="immagine 3">
+                </div>
                 <div class="debug right">testo</div>
             </div>
         </section>
