--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Struttura Discord</title>
+    <title>Discord</title>
 </head>
 <body>
     <!-- inizio header -->
@@ -42,27 +42,42 @@
     <!-- inizio main -->
     <main>
         <section>
-            <div class="contenitore debug flex-elementi">
+            <div class="contenitore debug flex-elementi center">
                 <div class="debug left">
                     <img src="./img/item1.svg" alt="immagine 1">
                 </div>
-                <div class="debug right">testo</div>
+                <div class="debug right">
+                    <div class="testo-secondario debug">
+                        <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="sezione-grigia">
-            <div class="contenitore debug flex-elementi">
-                <div class="debug right">testo</div>
+            <div class="contenitore debug flex-elementi center">
+                <div class="debug right">
+                    <div class="testo-secondario debug">
+                        <h2>Dove trovarsi è facile</h2>
+                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
+                    </div>
+                </div>
                 <div class="debug left">
                     <img src="./img/item2.svg" alt="immagine 2">
                 </div>
             </div>
         </section>
         <section>
-            <div class="contenitore debug flex-elementi">
+            <div class="contenitore debug flex-elementi center">
                 <div class="debug left">
                     <img src="./img/item3.svg" alt="immagine 3">
                 </div>
-                <div class="debug right">testo</div>
+                <div class="debug right">
+                    <div class="testo-secondario debug">
+                        <h2>Da pochi a un fandom</h2>
+                        <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="sezione-grigia">
