--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
             </div>
         </section>
         <section class="sezione-grigia">
-            <div class="contenitore debug flex-elementi">4</div>
+            <div class="contenitore centratura-testo debug">
+                <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <img src="./img/item4-big.svg" alt="immagine 4">
+            </div>
         </section>
     </main>
     <!-- fine main -->
