--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                 <h2>Tecnologia affidabile per tenersi in contatto</h2>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="./img/item4-big.svg" alt="immagine 4">
+                <h3>Pronto a iniziare la tua avventura?</h3>
+                <a href="" class="button button-violet button-grande m-button">&#129047; Scarica per Mac</a>
             </div>
         </section>
     </main>
