Add elements in ul

--- a/index.html
+++ b/index.html
@@ -96,24 +96,55 @@
     <footer>
         <div class="footer-up contenitore debug flex-elementi">
             <ul>
-                <li>1</li>
+                <li>
+                    <h3 class="testo-viola">Il tuo posto per parlare</h3>
+                </li>
+                <li>
+                    <img src="./img/ita.png" alt="ita" class="flag">
+                    <a href="">Italiano &#709;</a>
+                </li>
             </ul>
             <ul>
-                <li>2</li>
+                <li class="testo-viola">Prodotto</li>
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Perché Discord</a></li>
+                <li><a href="">Nitro</a></li>
+                <li><a href="">Sicurezza</a></li>
+                <li><a href="">Assistenza</a></li>
             </ul>
             <ul>
-                <li>3</li>
+                <li class="testo-viola">Compagnia</li>
+                <li><a href="">Chi siamo</a></li>
+                <li><a href="">Lavora con noi</a></li>
+                <li><a href="">Marchio</a></li>
+                <li><a href="">Redazione</a></li>
+                <li><a href="">Negozio</a></li>
             </ul>
             <ul>
-                <li>4</li>
+                <li class="testo-viola">Risorse</li>
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Perché Discord</a></li>
+                <li><a href="">Nitro</a></li>
+                <li><a href="">Sicurezza</a></li>
+                <li><a href="">Assistenza</a></li>
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Perché Discord</a></li>
+                <li><a href="">Nitro</a></li>
+                <li><a href="">Sicurezza</a></li>
+                <li><a href="">Assistenza</a></li>
             </ul>
             <ul>
-                <li>5</li>
+                <li class="testo-viola">Norme</li>
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Perché Discord</a></li>
+                <li><a href="">Nitro</a></li>
+                <li><a href="">Sicurezza</a></li>
+                <li><a href="">Assistenza</a></li>
             </ul>
         </div>
         <div class="footer-down contenitore debug flex-elementi center">
             <img src="./img/logo.svg" alt="logo in footer">
-            <a href="" class="button">Registrati</a>
+            <a href="" class="button button-violet">Registrati</a>
         </div>
     </footer>
     <!-- fine footer -->
