--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- inizio header -->
     <header>
         <div>
-            <nav class="contenitore debug flex-elementi center p-nav">
+            <nav class="contenitore flex-elementi center p-nav">
                 <img src="./img/logo.svg" alt="logo in header">
                 <ul class="flex-elementi">
                     <li><a href="">Scarica</a></li>
@@ -27,7 +27,7 @@
                 <a href="" class="button">Accedi</a>
             </nav>
             <div id="hero-image" class="flex-elementi center">
-                <div class="contenitore debug">
+                <div class="contenitore">
                     <div class="testo-principale centratura-testo">
                         <h1>Il tuo posto per parlare</h1>
                         <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
@@ -43,12 +43,12 @@
     <!-- inizio main -->
     <main>
         <section>
-            <div class="contenitore debug flex-elementi center">
-                <div class="debug left">
+            <div class="contenitore flex-elementi center">
+                <div class="left">
                     <img src="./img/item1.svg" alt="immagine 1">
                 </div>
-                <div class="debug right">
-                    <div class="testo-secondario debug">
+                <div class="right">
+                    <div class="testo-secondario ">
                         <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                         <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                     </div>
@@ -56,25 +56,25 @@
             </div>
         </section>
         <section class="sezione-grigia">
-            <div class="contenitore debug flex-elementi center">
-                <div class="debug right">
-                    <div class="testo-secondario debug">
+            <div class="contenitore flex-elementi center">
+                <div class="right">
+                    <div class="testo-secondario">
                         <h2>Dove trovarsi è facile</h2>
                         <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
                     </div>
                 </div>
-                <div class="debug left">
+                <div class="left">
                     <img src="./img/item2.svg" alt="immagine 2">
                 </div>
             </div>
         </section>
         <section>
-            <div class="contenitore debug flex-elementi center">
-                <div class="debug left">
+            <div class="contenitore  flex-elementi center">
+                <div class=" left">
                     <img src="./img/item3.svg" alt="immagine 3">
                 </div>
-                <div class="debug right">
-                    <div class="testo-secondario debug">
+                <div class="right">
+                    <div class="testo-secondario">
                         <h2>Da pochi a un fandom</h2>
                         <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
                     </div>
@@ -82,7 +82,7 @@
             </div>
         </section>
         <section class="sezione-grigia">
-            <div class="contenitore centratura-testo debug">
+            <div class="contenitore centratura-testo">
                 <h2>Tecnologia affidabile per tenersi in contatto</h2>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="./img/item4-big.svg" alt="immagine 4">
@@ -95,7 +95,7 @@
 
     <!-- inizio footer -->
     <footer>
-        <div class="footer-up contenitore debug flex-elementi">
+        <div class="footer-up contenitore flex-elementi">
             <ul>
                 <li>
                     <h3 class="testo-viola">Il tuo posto per parlare</h3>
@@ -149,7 +149,7 @@
                 <li><a href="">Assistenza</a></li>
             </ul>
         </div>
-        <div class="footer-down contenitore debug flex-elementi center">
+        <div class="footer-down contenitore flex-elementi center">
             <img src="./img/logo.svg" alt="logo in footer">
             <a href="" class="button button-violet">Registrati</a>
         </div>
